feature: complete URL Shortener application with Angular frontend
Backend:
- ASP.NET Core Web API with Entity Framework
- SQLite database with code-first migrations
- User authentication (Admin/User roles)
- URL CRUD operations with API endpoints
- URL redirect by short code
- About page with editable content
- CORS configuration for Angular frontend
- Database seeding with test users and URLs

Frontend:
- Angular 19 with standalone components
- Tailwind CSS minimal styling
- Login/Register pages with authentication
- URL list with create, view, delete operations
- URL details page with full information
- Copy to clipboard functionality
- Route guards for protected pages
- Auth service with localStorage persistence
- Responsive design

Features:
- Admin can delete all URLs
- Users can delete only their own URLs
- Anonymous users can view URL list
- Real-time updates without page reload
- Form validation and error handling

--- a/UrlShortener/UrlShortener.csproj
+++ b/UrlShortener/UrlShortener.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\DTOs\" />
     <Folder Include="Models\ViewModels\" />
   </ItemGroup>
 
@@ -21,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
   </ItemGroup>
 
 </Project>
